external-crates/move/crates/move-compiler/tests/development/typing/signed_int_neg_precedence.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_neg_precedence.move:8:16
  │
8 │         let a: i64 = 3i64;
  │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_neg_precedence.move:9:16
  │
9 │         let b: i64 = 5i64;
  │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:10:17
   │
10 │         let _x: i64 = -a + b;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:10:23
   │
10 │         let _x: i64 = -a + b;
   │                       ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:15:16
   │
15 │         let a: i64 = 3i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:16:16
   │
16 │         let b: i64 = 5i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:17:17
   │
17 │         let _x: i64 = -a * b;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:17:23
   │
17 │         let _x: i64 = -a * b;
   │                       ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:22:16
   │
22 │         let a: i64 = 3i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:23:16
   │
23 │         let b: i64 = 5i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:24:17
   │
24 │         let _x: i64 = -a - b;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:24:23
   │
24 │         let _x: i64 = -a - b;
   │                       ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:29:16
   │
29 │         let a: i64 = 3i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:30:16
   │
30 │         let b: i64 = 5i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:31:17
   │
31 │         let _x: i64 = -(a + b);
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:31:23
   │
31 │         let _x: i64 = -(a + b);
   │                       ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:36:16
   │
36 │         let a: i64 = 3i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:37:17
   │
37 │         let _x: i64 = -a;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:37:23
   │
37 │         let _x: i64 = -a;
   │                       ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:43:16
   │
43 │         let a: i32 = 10i32;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:43:22
   │
43 │         let a: i32 = 10i32;
   │                      ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:44:16
   │
44 │         let b: i32 = 3i32;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:44:22
   │
44 │         let b: i32 = 3i32;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:45:16
   │
45 │         let c: i32 = 7i32;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:45:22
   │
45 │         let c: i32 = 7i32;
   │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:46:17
   │
46 │         let _x: i32 = -a + b * c;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:46:23
   │
46 │         let _x: i32 = -a + b * c;
   │                       ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:47:17
   │
47 │         let _y: i32 = -(a + b) * c;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:47:23
   │
47 │         let _y: i32 = -(a + b) * c;
   │                       ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:48:17
   │
48 │         let _z: i32 = -a + -b + -c;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:48:23
   │
48 │         let _z: i32 = -a + -b + -c;
   │                       ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:48:28
   │
48 │         let _z: i32 = -a + -b + -c;
   │                            ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_neg_precedence.move:48:33
   │
48 │         let _z: i32 = -a + -b + -c;
   │                                 ^ Signed integer types are under development
